package cu.datys.principles.dip.authentication.good;

/**
 * Created by Alex on 25/01/2018.
 */
public class User {
    private int id;

    public int getId() {
        return id;
    }

    public void setId(int id) {
        this.id = id;
    }
}
